adding image column

--- a/src/main/resources/templates/new_user.html
+++ b/src/main/resources/templates/new_user.html
@@ -20,6 +20,8 @@
 
         <input type="text" th:field="*{address}" placeholder="User Address" class="form-control mb-4 col-4">
 
+        <input type="file" name="image" class="form-control mb-4 col-4">
+
         <button type="submit" class="btn btn-info col-2"> Save User</button>
     </form>
 
