--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
             <th>ID</th>
             <th>User Name</th>
             <th>User Address</th>
+            <th>User Image</th>
             <th> Actions </th>
         </tr>
         </thead>
@@ -30,6 +31,7 @@
             <td th:text="${user.id}"></td>
             <td th:text="${user.name}"></td>
             <td th:text="${user.address}"></td>
+            <td><img th:src="@{${user.image}}" alt="User Image" class="img-fluid"></td>
             <td> <a th:href="@{/showFormForUpdate/{id}(id=${user.id})}" class="btn btn-primary">Update</a>
                 <a th:href="@{/deleteUser/{id}(id=${user.id})}" class="btn btn-danger">Delete</a>
             </td>
